mssql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
 name: mssql
 namespace: keycloak
spec:
 serviceName: "mssql"
 replicas: 1 # only one pod, with one SQL Server instance deployed.
 selector:
  matchLabels:
   app: mssql  # this has to be the same as .spec.template.metadata.labels
 template:
  metadata:
   labels:
    app: mssql # this has to be the same as .spec.selector.matchLabels, as documented [here](https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/):
  spec:
   securityContext:
     fsGroup: 10001
   containers:
   - name: mssql # container name within the pod.
     image: mcr.microsoft.com/mssql/server:2022-latest
     ports:
     - containerPort: 1433
       name: tcpsql
     volumeMounts:
     - name: mssql
       mountPath: "/var/opt/mssql"
 volumeClaimTemplates:
   - metadata:
      name: mssql
     spec:
      accessModes:
      - ReadWriteOnce
      resources:
       requests:
        storage: 8Gi

---
apiVersion: v1
kind: Service
metadata:
  name: mssql
  namespace: keycloak
spec:
  type: LoadBalancer
  selector:
    statefulset.kubernetes.io/pod-name: mssql-0
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
      name: tcpsql
