manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 2
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: mykeycloak01
        image: mykeycloak01:26.0.6
        args: ["start","--optimized"]
        resources:
          limits:
            cpu: "500m"
            memory: "750Mi"
          requests:
            cpu: "250m"
            memory: "500Mi"
        ports:
        - name: http
          containerPort: 8080
        - name: jgroups
          containerPort: 7600
        livenessProbe:
          httpGet:
            path: /health/live
            port: 9000
          initialDelaySeconds: 150
          failureThreshold: 1
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 9000
          failureThreshold: 1


---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak

---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-headless
  namespace: keycloak
spec:
  publishNotReadyAddresses: true
  clusterIP: None
  ports:
    - name: ping
      port: 7600
      targetPort: 7600
  selector:
    app: keycloak


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: keycloak
            port:
              name: http
